# Intro-to-FastAPI

./: .dockerignore  Dockerfile  README.md  pyproject.toml  workflow_demo.ipynb
src/app/: api.py  streamlit_app.py
src/app/core/: dataset.py  schemas.py
src/app/routers/: clean.py  eda.py  ml.py  ml2.py  mv.py
src/app/services/: cleaning_service.py  eda_service.py  ml_advanced_service.py  ml_service.py  mv_service.py
tests/: test_end_to_end.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
